--- a/gitignore/welcome.mustache
+++ b/gitignore/welcome.mustache
@@ -5,8 +5,9 @@
     <title></title>
   </head>
   <body>
-<h1>Welcom to Gabble</h1>
-<form action="/redirect" method="post">
+<h1>Thanks for Signing up and Welcome to Gabble</h1>
+<h2>all u got to do now is Sign In and be a Gabbler</h2>
+<form action="/purple" method="post">
   <button type="submit"></button>
 
 </form>
